cmake_minimum_required(VERSION 3.20)
project(Demystified_Object_Oriented_Programming_with_CPP)

set(CMAKE_CXX_STANDARD 17)

include_directories(Chapter15)
include_directories(Chapter15/original)
include_directories(Chapter20)
include_directories(Chapter20/unique)

add_subdirectory(Chapter01)

#add_executable(Demystified_Object_Oriented_Programming_with_CPP
#        Chapter01/Assessments/Chp1-Q3.cpp
#        Chapter01/original/Chp1-Ex1.cpp
#        Chapter01/original/Chp1-Ex10.cpp
#        Chapter01/original/Chp1-Ex11.cpp
#        Chapter01/original/Chp1-Ex2.cpp
#        Chapter01/original/Chp1-Ex3.cpp
#        Chapter01/original/Chp1-Ex4.cpp
#        Chapter01/original/Chp1-Ex5.cpp
#        Chapter01/original/Chp1-Ex6.cpp
#        Chapter01/original/Chp1-Ex7.cpp
#        Chapter01/original/Chp1-Ex8.cpp
#        Chapter01/original/Chp1-Ex9.cpp
#        Chapter01/Chp1-Ex1.cpp
#        Chapter01/Chp1-Ex10.cpp
#        Chapter01/Chp1-Ex11.cpp
#        Chapter01/Chp1-Ex2.cpp
#        Chapter01/Chp1-Ex3.cpp
#        Chapter01/Chp1-Ex4.cpp
#        Chapter01/Chp1-Ex5.cpp
#        Chapter01/Chp1-Ex6.cpp
#        Chapter01/Chp1-Ex7.cpp
#        Chapter01/Chp1-Ex8.cpp
#        Chapter01/Chp1-Ex9.cpp
#        Chapter02/Assessments/Chp2-Q2.cpp
#        Chapter02/original/Chp2-Ex1.cpp
#        Chapter02/original/Chp2-Ex2.cpp
#        Chapter02/original/Chp2-Ex3.cpp
#        Chapter02/original/Chp2-Ex4.cpp
#        Chapter02/original/Chp2-Ex5.cpp
#        Chapter02/original/Chp2-Ex6.cpp
#        Chapter02/original/Chp2-Ex7.cpp
#        Chapter02/original/Chp2-Ex8.cpp
#        Chapter02/Chp2-Ex1.cpp
#        Chapter02/Chp2-Ex2.cpp
#        Chapter02/Chp2-Ex3.cpp
#        Chapter02/Chp2-Ex4.cpp
#        Chapter02/Chp2-Ex5.cpp
#        Chapter02/Chp2-Ex6.cpp
#        Chapter02/Chp2-Ex7.cpp
#        Chapter02/Chp2-Ex8.cpp
#        Chapter03/Assessments/Chp3-Q1.cpp
#        Chapter03/Assessments/Chp3-Q2.cpp
#        Chapter03/original/Chp3-Ex1.cpp
#        Chapter03/original/Chp3-Ex2.cpp
#        Chapter03/original/Chp3-Ex3.cpp
#        Chapter03/original/Chp3-Ex4.cpp
#        Chapter03/original/Chp3-Ex5.cpp
#        Chapter03/original/Chp3-Ex6.cpp
#        Chapter03/original/Chp3-Ex7.cpp
#        Chapter03/original/Chp3-Ex8.cpp
#        Chapter03/original/Chp3-Ex9.cpp
#        Chapter03/Chp3-Ex1.cpp
#        Chapter03/Chp3-Ex2.cpp
#        Chapter03/Chp3-Ex3.cpp
#        Chapter03/Chp3-Ex4.cpp
#        Chapter03/Chp3-Ex5.cpp
#        Chapter03/Chp3-Ex6.cpp
#        Chapter03/Chp3-Ex7.cpp
#        Chapter03/Chp3-Ex8.cpp
#        Chapter03/Chp3-Ex9.cpp
#        Chapter04/Assessments/Chp4-Q1.cpp
#        Chapter04/original/Chp4-Ex1.cpp
#        Chapter04/original/Chp4-Ex2.cpp
#        Chapter04/original/Chp4-Ex3.cpp
#        Chapter04/original/Chp4-Ex4.cpp
#        Chapter04/original/Chp4-Ex5.cpp
#        Chapter04/original/Chp4-Ex6.cpp
#        Chapter04/original/Chp4-Ex7.cpp
#        Chapter04/Chp4-Ex1.cpp
#        Chapter04/Chp4-Ex2.cpp
#        Chapter04/Chp4-Ex3.cpp
#        Chapter04/Chp4-Ex4.cpp
#        Chapter04/Chp4-Ex5.cpp
#        Chapter04/Chp4-Ex6.cpp
#        Chapter04/Chp4-Ex7.cpp
#        Chapter05/original/Chp5-Ex1.cpp
#        Chapter05/original/Chp5-Ex10.cpp
#        Chapter05/original/Chp5-Ex11.cpp
#        Chapter05/original/Chp5-Ex2.cpp
#        Chapter05/original/Chp5-Ex3.cpp
#        Chapter05/original/Chp5-Ex4.cpp
#        Chapter05/original/Chp5-Ex5.cpp
#        Chapter05/original/Chp5-Ex6.cpp
#        Chapter05/original/Chp5-Ex7.cpp
#        Chapter05/original/Chp5-Ex8.cpp
#        Chapter05/original/Chp5-Ex9.cpp
#        Chapter05/Chp5-Ex1.cpp
#        Chapter05/Chp5-Ex10.cpp
#        Chapter05/Chp5-Ex11.cpp
#        Chapter05/Chp5-Ex2.cpp
#        Chapter05/Chp5-Ex3.cpp
#        Chapter05/Chp5-Ex4.cpp
#        Chapter05/Chp5-Ex5.cpp
#        Chapter05/Chp5-Ex6.cpp
#        Chapter05/Chp5-Ex7.cpp
#        Chapter05/Chp5-Ex8.cpp
#        Chapter05/Chp5-Ex9.cpp
#        Chapter06/original/Chp6-Ex1.cpp
#        Chapter06/original/Chp6-Ex2.cpp
#        Chapter06/original/Chp6-Ex3.cpp
#        Chapter06/original/Chp6-Ex4.cpp
#        Chapter06/Chp6-Ex1.cpp
#        Chapter06/Chp6-Ex2.cpp
#        Chapter06/Chp6-Ex3.cpp
#        Chapter06/Chp6-Ex4.cpp
#        Chapter07/original/Chp7-Ex1.cpp
#        Chapter07/Chp7-Ex1.cpp
#        Chapter08/original/Chp8-Ex1.cpp
#        Chapter08/Chp8-Ex1.cpp
#        Chapter09/original/Chp9-Ex1.cpp
#        Chapter09/original/Chp9-Ex2.cpp
#        Chapter09/original/Chp9-Ex3.cpp
#        Chapter09/Chp9-Ex1.cpp
#        Chapter09/Chp9-Ex2.cpp
#        Chapter09/Chp9-Ex3.cpp
#        Chapter10/original/Chp10-Ex1.cpp
#        Chapter10/original/Chp10-Ex2.cpp
#        Chapter10/Chp10-Ex1.cpp
#        Chapter10/Chp10-Ex2.cpp
#        Chapter11/original/Chp11-Ex1.cpp
#        Chapter11/original/Chp11-Ex2.cpp
#        Chapter11/original/Chp11-Ex3.cpp
#        Chapter11/original/Chp11-Ex4.cpp
#        Chapter11/original/Chp11-Ex5.cpp
#        Chapter11/original/Chp11-Ex6.cpp
#        Chapter11/Chp11-Ex1.cpp
#        Chapter11/Chp11-Ex2.cpp
#        Chapter11/Chp11-Ex3.cpp
#        Chapter11/Chp11-Ex4.cpp
#        Chapter11/Chp11-Ex5.cpp
#        Chapter11/Chp11-Ex6.cpp
#        Chapter12/original/Chp12-Ex1.cpp
#        Chapter12/original/Chp12-Ex2.cpp
#        Chapter12/original/Chp12-Ex3.cpp
#        Chapter12/Chp12-Ex1.cpp
#        Chapter12/Chp12-Ex2.cpp
#        Chapter12/Chp12-Ex3.cpp
#        Chapter13/original/Chp13-Ex1.cpp
#        Chapter13/original/Chp13-Ex2.cpp
#        Chapter13/original/Chp13-Ex3.cpp
#        Chapter13/Chp13-Ex1.cpp
#        Chapter13/Chp13-Ex2.cpp
#        Chapter13/Chp13-Ex3.cpp
#        Chapter14/original/Chp14-Ex1.cpp
#        Chapter14/original/Chp14-Ex2.cpp
#        Chapter14/original/Chp14-Ex3.cpp
#        Chapter14/original/Chp14-Ex4.cpp
#        Chapter14/original/Chp14-Ex5.cpp
#        Chapter14/original/Chp14-Ex6.cpp
#        Chapter14/original/Chp14-Ex7.cpp
#        Chapter14/original/Chp14-Ex8.cpp
#        Chapter14/Chp14-Ex1.cpp
#        Chapter14/Chp14-Ex2.cpp
#        Chapter14/Chp14-Ex3.cpp
#        Chapter14/Chp14-Ex4.cpp
#        Chapter14/Chp14-Ex5.cpp
#        Chapter14/Chp14-Ex6.cpp
#        Chapter14/Chp14-Ex7.cpp
#        Chapter14/Chp14-Ex8.cpp
#        Chapter15/original/Chp15-Ex1.cpp
#        Chapter15/original/Chp15-Ex2.cpp
#        Chapter15/original/Person.cpp
#        Chapter15/original/Person.h
#        Chapter15/original/Student.cpp
#        Chapter15/original/Student.h
#        Chapter15/Chp15-Ex1.cpp
#        Chapter15/Chp15-Ex2.cpp
#        Chapter15/Person.cpp
#        Chapter15/Person.h
#        Chapter15/Student.cpp
#        Chapter15/Student.h
#        Chapter16/Chp16-Ex1.cpp
#        Chapter17/Chp17-Ex1.cpp
#        Chapter17/Chp17-Ex2.cpp
#        Chapter18/Chp18-Ex1.cpp
#        Chapter18/Chp18-Ex2.cpp
#        Chapter18/Chp18-Ex3.cpp
#        Chapter19/Chp19-Ex1.cpp
#        Chapter19/Chp19-Ex2.cpp
#        Chapter19/Chp19-Ex3.cpp
#        Chapter20/unique/Chp20-Ex3.cpp
#        Chapter20/unique/Person.h
#        Chapter20/unique/PersonImpl.cpp
#        Chapter20/Chp20-Ex1.cpp
#        Chapter20/Chp20-Ex2.cpp
#        Chapter20/Person.h
#        Chapter20/PersonImpl.cpp)
