cmake_minimum_required(VERSION 3.20)
project(Demystified_Object_Oriented_Programming_with_CPP_ch02)

set(CMAKE_CXX_STANDARD 17)

add_executable(Chp2-Q2 Assessments/Chp2-Q2.cpp)

add_executable(Chp2-Ex1 Chp2-Ex1.cpp)
add_executable(Chp2-Ex2 Chp2-Ex2.cpp)
add_executable(Chp2-Ex3 Chp2-Ex3.cpp)
add_executable(Chp2-Ex4 Chp2-Ex4.cpp)
add_executable(Chp2-Ex5 Chp2-Ex5.cpp)
add_executable(Chp2-Ex6 Chp2-Ex6.cpp)
add_executable(Chp2-Ex7 Chp2-Ex7.cpp)
add_executable(Chp2-Ex8 Chp2-Ex8.cpp)