cmake_minimum_required(VERSION 3.20)
project(Demystified_Object_Oriented_Programming_with_CPP_ch03)

set(CMAKE_CXX_STANDARD 17)

add_executable(Chp3-Q1 Assessments/Chp3-Q1.cpp)
add_executable(Chp3-Q2 Assessments/Chp3-Q2.cpp)

add_executable(Chp3-Ex1 Chp3-Ex1.cpp)
add_executable(Chp3-Ex2 Chp3-Ex2.cpp)
add_executable(Chp3-Ex3 Chp3-Ex3.cpp)
add_executable(Chp3-Ex4 Chp3-Ex4.cpp)
add_executable(Chp3-Ex5 Chp3-Ex5.cpp)
add_executable(Chp3-Ex6 Chp3-Ex6.cpp)
add_executable(Chp3-Ex7 Chp3-Ex7.cpp)
add_executable(Chp3-Ex8 Chp3-Ex8.cpp)
add_executable(Chp3-Ex9 Chp3-Ex9.cpp)





