cmake_minimum_required(VERSION 3.20)
project(Demystified_Object_Oriented_Programming_with_CPP_ch04)

set(CMAKE_CXX_STANDARD 17)

add_executable(Chp4-Q1 Assessments/Chp4-Q1.cpp)

add_executable(Chp4-Ex1 Chp4-Ex1.cpp)
add_executable(Chp4-Ex2 Chp4-Ex2.cpp)
add_executable(Chp4-Ex3 Chp4-Ex3.cpp)
add_executable(Chp4-Ex4 Chp4-Ex4.cpp)
add_executable(Chp4-Ex5 Chp4-Ex5.cpp)
add_executable(Chp4-Ex6 Chp4-Ex6.cpp)
add_executable(Chp4-Ex7 Chp4-Ex7.cpp)
