cmake_minimum_required(VERSION 3.20)
project(Demystified_Object_Oriented_Programming_with_CPP_ch05)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Chp5-Q1 Assessments/Chp5-Q1.cpp)

add_executable(Chp5-Ex1  Chp5-Ex1.cpp)
add_executable(Chp5-Ex2  Chp5-Ex2.cpp)
add_executable(Chp5-Ex3  Chp5-Ex3.cpp)
add_executable(Chp5-Ex4  Chp5-Ex4.cpp)
add_executable(Chp5-Ex5  Chp5-Ex5.cpp)
add_executable(Chp5-Ex6  Chp5-Ex6.cpp)
add_executable(Chp5-Ex7  Chp5-Ex7.cpp)
add_executable(Chp5-Ex8  Chp5-Ex8.cpp)
add_executable(Chp5-Ex9  Chp5-Ex9.cpp)
add_executable(Chp5-Ex10 Chp5-Ex10.cpp)
add_executable(Chp5-Ex11 Chp5-Ex11.cpp)
